--- a/TestExcel/Views/Report/data.cshtml
+++ b/TestExcel/Views/Report/data.cshtml
@@ -74,7 +74,7 @@
         });
     });
 </script>
-<div class="container" style="padding-top:60px">
+<div class="container" style="padding-top:40px">
     <div class="w3-row">
         <div class="w3-half w3-margin-bottom">
             <div class="w3-container">
@@ -147,19 +147,58 @@
             </div>
         </div>
     </div>
-    <div class="w3-row">
-        <div class="w3-third w3-margin-bottom">
-            <div class="w3-container">
-                <div class="w3-card-4" style="max-width:400px;height:400px">
-                    <header class="w3-container w3-blue">
-                        <h1>PDF สาขาวิชา</h1>
-                    </header>
-                    @using (Html.BeginForm("Report", "Report", FormMethod.Post, new { @class = "form-horizontal" }))
-                    {
-                        <div class="w3-container">
+    <div class="container">
+        <div class="w3-row">
+            <div class="w3-third w3-margin-bottom">
+                <div class="w3-container">
+                    <div class="w3-card-4" style="max-width:400px;height:400px">
+                        <header class="w3-container w3-blue">
+                            <h1>PDF สาขาวิชา</h1>
+                        </header>
+                        @using (Html.BeginForm("Report", "Report", FormMethod.Post, new { @class = "form-horizontal" }))
+                        {
                             <div class="w3-container">
-                                <label class="w3-margin-top">ภาควิชา</label>
-                                @Html.DropDownList("department_name", (SelectList)ViewBag.ddl_Department, new { @class = "w3-input w3-border w3-margin-bottom", style = "" })
+                                <div class="w3-container">
+                                    <label class="w3-margin-top">ภาควิชา</label>
+                                    @Html.DropDownList("department_name", (SelectList)ViewBag.ddl_Department, new { @class = "w3-input w3-border w3-margin-bottom", style = "" })
+                                    <label>ภาคการศึกษา</label>
+                                    <select class="w3-select w3-border w3-margin-bottom" id="semester" name="semester">
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                    </select>
+                                    <br>
+                                    <label>ปีการศึกษา</label>
+                                    @Html.DropDownList("year", (SelectList)ViewBag.ddl_Year, new { @class = "w3-input w3-border w3-margin-bottom", style = "" })
+                                    <div class="w3-center w3-margin-top">
+                                        <hr>
+                                        <button type="submit" href="#" class="w3-button w3-green w3-margin-bottom">DOWNLOAD</button>
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                    </div>
+                </div>
+            </div>
+            <div class="w3-third w3-margin-bottom">
+                <div class="w3-container">
+                    <div class="w3-card-4" style="max-width:400px;height:400px">
+                        <header class="w3-container w3-blue">
+                            <h1>PDF อาคารเรียน</h1>
+                        </header>
+                        @using (Html.BeginForm("TeReport", "Report", FormMethod.Post, new { @class = "form-horizontal" }))
+                        {
+                            <div class="w3-container">
+                                <label class="w3-margin-top">เลือกวัน</label>
+                                <br>
+                                <select class="w3-select w3-border w3-margin-bottom" id="DDL_DATE" name="DDL_DATE">
+                                    <option value="0">วันจันทร์</option>
+                                    <option value="1">วันอังคาร</option>
+                                    <option value="2">วันพุธ</option>
+                                    <option value="3">วันพฤหัสบดี</option>
+                                    <option value="4">วันศุกร์</option>
+                                    <option value="5">วันเสาร์</option>
+                                </select>
                                 <label>ภาคการศึกษา</label>
                                 <select class="w3-select w3-border w3-margin-bottom" id="semester" name="semester">
                                     <option value="1">1</option>
@@ -174,84 +213,47 @@
                                     <button type="submit" href="#" class="w3-button w3-green w3-margin-bottom">DOWNLOAD</button>
                                 </div>
                             </div>
-                        </div>
-                    }
+                        }
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="w3-third w3-margin-bottom">
-            <div class="w3-container">
-                <div class="w3-card-4" style="max-width:400px;height:400px">
-                    <header class="w3-container w3-blue">
-                        <h1>PDF อาคารเรียน</h1>
-                    </header>
-                    @using (Html.BeginForm("TeReport", "Report", FormMethod.Post, new { @class = "form-horizontal" }))
-                    {
-                        <div class="w3-container">
-                            <label class="w3-margin-top">เลือกวัน</label>
-                            <br>
-                            <select class="w3-select w3-border w3-margin-bottom" id="DDL_DATE" name="DDL_DATE">
-                                <option value="0">วันจันทร์</option>
-                                <option value="1">วันอังคาร</option>
-                                <option value="2">วันพุธ</option>
-                                <option value="3">วันพฤหัสบดี</option>
-                                <option value="4">วันศุกร์</option>
-                                <option value="5">วันเสาร์</option>
-                            </select>
-                            <label>ภาคการศึกษา</label>
-                            <select class="w3-select w3-border w3-margin-bottom" id="semester" name="semester">
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>
-                            <br>
-                            <label>ปีการศึกษา</label>
-                            @Html.DropDownList("year", (SelectList)ViewBag.ddl_Year, new { @class = "w3-input w3-border w3-margin-bottom", style = "" })
-                            <div class="w3-center w3-margin-top">
-                                <hr>
-                                <button type="submit" href="#" class="w3-button w3-green w3-margin-bottom">DOWNLOAD</button>
+            <div class="w3-third w3-margin-bottom">
+                <div class="w3-container">
+                    <div class="w3-card-4" style="max-width:400px;height:400px">
+                        <header class="w3-container w3-blue">
+                            <h1>PDF ห้องเรียน</h1>
+                        </header>
+                        @using (Html.BeginForm("ClReport", "Report", FormMethod.Post, new { @class = "form-horizontal" }))
+                        {
+                            <div class="w3-container">
+                                <label class="w3-margin-top">เลือกอาคารเรียน</label>
+                                <br>
+                                <select class="w3-select w3-border w3-margin-bottom" id="DDL_BUILDING" name="DDL_BUILDING" style="">
+                                    <option value="63">อาคารเรียน 63</option>
+                                    <option value="632">อาคารเรียน 63 (อาคารสีเทา ตึกใหม่)</option>
+                                    <option value="62">อาคารเรียน 62</option>
+                                    <option value="65">อาคารเรียน 65</option>
+                                    <option value="42">อาคารเรียน 42</option>
+                                    <option value="69">อาคารเรียน 69</option>
+                                    <option value="64">อาคารเรียน 64</option>
+                                    <option value="1">อื่น ๆ</option>
+                                </select>
+                                <label>ภาคการศึกษา</label>
+                                <select class="w3-select w3-border w3-margin-bottom" id="semester" name="semester">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                </select>
+                                <br>
+                                <label>ปีการศึกษา</label>
+                                @Html.DropDownList("year", (SelectList)ViewBag.ddl_Year, new { @class = "w3-input w3-border w3-margin-bottom", style = "" })
+                                <div class="w3-center w3-margin-top">
+                                    <hr>
+                                    <button type="submit" href="#" class="w3-button w3-green w3-margin-bottom">DOWNLOAD</button>
+                                </div>
                             </div>
-                        </div>
-                    }
-                </div>
-            </div>
-        </div>
-        <div class="w3-third w3-margin-bottom">
-            <div class="w3-container">
-                <div class="w3-card-4" style="max-width:400px;height:400px">
-                    <header class="w3-container w3-blue">
-                        <h1>PDF ห้องเรียน</h1>
-                    </header>
-                    @using (Html.BeginForm("ClReport", "Report", FormMethod.Post, new { @class = "form-horizontal" }))
-                    {
-                        <div class="w3-container">
-                            <label class="w3-margin-top">เลือกอาคารเรียน</label>
-                            <br>
-                            <select class="w3-select w3-border w3-margin-bottom" id="DDL_BUILDING" name="DDL_BUILDING" style="">
-                                <option value="63">อาคารเรียน 63</option>
-                                <option value="632">อาคารเรียน 63 (อาคารสีเทา ตึกใหม่)</option>
-                                <option value="62">อาคารเรียน 62</option>
-                                <option value="65">อาคารเรียน 65</option>
-                                <option value="42">อาคารเรียน 42</option>
-                                <option value="69">อาคารเรียน 69</option>
-                                <option value="64">อาคารเรียน 64</option>
-                                <option value="1">อื่น ๆ</option>
-                            </select>
-                            <label>ภาคการศึกษา</label>
-                            <select class="w3-select w3-border w3-margin-bottom" id="semester" name="semester">
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>
-                            <br>
-                            <label>ปีการศึกษา</label>
-                            @Html.DropDownList("year", (SelectList)ViewBag.ddl_Year, new { @class = "w3-input w3-border w3-margin-bottom", style = "" })
-                            <div class="w3-center w3-margin-top">
-                                <hr>
-                                <button type="submit" href="#" class="w3-button w3-green w3-margin-bottom">DOWNLOAD</button>
-                            </div>
-                        </div>
-                    }
+                        }
+                    </div>
                 </div>
             </div>
         </div>
