--- a/TestExcel/Views/TimeSchedule/DSchedule.cshtml
+++ b/TestExcel/Views/TimeSchedule/DSchedule.cshtml
@@ -67,14 +67,16 @@
         <tbody>
             <tr>
                 <td align="right"><b>ปีการศึกษา&nbsp;</b></td>
-                <td colspan="5" style="padding-right:1em">@Html.DropDownList("ddl_Year", (SelectList)ViewBag.ddl_Year, new { @class = "form-control", style = "" })</td>
+                <td colspan="5" style="padding-right:1em">
+                @Html.DropDownList("ddl_Year", (SelectList)ViewBag.ddl_Year, new { @class = "form-control", style = "" })</td>
                 <td align="right"><b>ภาคการศึกษา&nbsp;</b></td>
                 <td colspan="5" style="padding-right:1em">
-                    <select class="form-control" id="ddl_Semester" name="ddl_Semester">
+                    @Html.DropDownList("ddl_Semester", (SelectList)ViewBag.ddl_Semester, new { @class = "form-control", style = "width:70px" })
+                    @*<select class="form-control" id="ddl_Semester" name="ddl_Semester">
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
-                    </select>
+                    </select>*@
                 </td>
                 <td align="right"><b>ภาควิชา&nbsp;</b></td>
                 <td colspan="5" style="padding-right:1em">
