--- a/TestExcel/Views/Data/Building.cshtml
+++ b/TestExcel/Views/Data/Building.cshtml
@@ -16,7 +16,7 @@
 </div>
 <br>
 <div class="container">
-    <a href="#" onclick="AddNew(0)" class="btn btn-info">Add New</a><br /><br />
+    <a href="#" onclick="AddNew(0)" class="btn btn-info pull-right">Add New</a><br /><br />
 
     <table class="w3-table-all" id="DataTable" name="DataTable">
         <thead>
@@ -40,7 +40,7 @@
                         {
                             buildingname = "อาคารเรียน 63 (อาคารสีเทา ตึกใหม่)";
                         }
-                        else if(item.BUILDING_NAME == "1")
+                        else if (item.BUILDING_NAME == "1")
                         {
                             buildingname = "อื่นๆ";
                         }
