--- a/TestExcel/Content/EditStyle.css
+++ b/TestExcel/Content/EditStyle.css
@@ -129,14 +129,20 @@
     margin-left: 5px;
     margin-right: -5px;
 }
+    .con2 {
+        margin-left: -50px;
+    }
 @media screen and (max-width: 1100px) {
     .space {
         margin-bottom: 10px;
-        margin-right: 0px;
-        margin-left: 0px;
+        margin-right: 0;
+        margin-left: 0;
     }
     .space2 {
-        margin-left: 0px;
-        margin-right: 0px;
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .con2 {
+        margin-left: 0;
     }
 }
