--- a/TestExcel/Views/Data/Professor.cshtml
+++ b/TestExcel/Views/Data/Professor.cshtml
@@ -15,7 +15,7 @@
 </div>
 <br>
 <div class="container">
-    <a href="#" onclick="AddNew(0)" class="btn btn-info">Add New</a><br /><br />
+    <a href="#" onclick="AddNew(0)" class="btn btn-info pull-right">Add New</a><br /><br />
 
     <table class="w3-table-all" id="DataTable" name="DataTable">
         <thead>
