--- a/TestExcel/Views/Report/data.cshtml
+++ b/TestExcel/Views/Report/data.cshtml
@@ -2,7 +2,6 @@
     Layout = "~/Views/Shared/_TimeScheduleLayout.cshtml";
 }
 <style>
-
     .image-preview-input {
         position: relative;
         overflow: hidden;
@@ -147,7 +146,8 @@
             </div>
         </div>
     </div>
-    <div class="container">
+</div>
+    <div class="container con2">
         <div class="w3-row">
             <div class="w3-third w3-margin-bottom">
                 <div class="w3-container">
@@ -258,4 +258,3 @@
             </div>
         </div>
     </div>
-</div>
