--- a/TestExcel/Views/Shared/_Navbar.cshtml
+++ b/TestExcel/Views/Shared/_Navbar.cshtml
@@ -14,8 +14,9 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("ตารางเรียน", "DSchedule", "TimeSchedule")</li>
+                <li><a href="@Url.Action("DSchedule","TimeSchedule")">ตารางเรียน</a></li>
                 <li><a href="@Url.Action("data","Report")">Import/Export Pdf/Excel</a></li>
+                <li><a href="@Url.Action("Section","Data")">แก้ไขข้อมูล</a></li>
                 @*
         <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
             </ul>
