--- a/TestExcel/Views/Shared/_Navbar.cshtml
+++ b/TestExcel/Views/Shared/_Navbar.cshtml
@@ -13,75 +13,77 @@
             @Html.ActionLink("Home", "DSchedule", "TimeSchedule", new { area = "" }, new { @class = "navbar-brand" })
         </div>
         <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
+            @if (Session["Username"] != null)
+            {<ul class="nav navbar-nav">
                 <li><a href="@Url.Action("DSchedule","TimeSchedule")">ตารางเรียน</a></li>
                 <li><a href="@Url.Action("data","Report")">Import/Export Pdf/Excel</a></li>
                 <li><a href="@Url.Action("Section","Data")">แก้ไขข้อมูล</a></li>
-                @*
-        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+                <li><a href="@Url.Action("Download","Report",new { id="คู่มือการใช้งาน" })">คู่มือการใช้งาน</a></li>
             </ul>
-            @if (Session["Username"] != null)
-            {
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown">
-                        <a class="dropdown-toggle noti" data-toggle="dropdown" href="#">
-                            <span class="fa fa-bell" aria-hidden="true"><span class="" id="count"></span></span>
-                        </a>
-                        <ul class="dropdown-menu" id="notiContent">
-                        </ul>
-                    </li>
-                    <li><a href="#" uk-icon="icon: sign-out"><i class="fa fa-user" aria-hidden="true"></i> @Session["Username"].ToString()</a></li>
-                    <li><a href="@Url.Action("Logout","Login")" uk-icon="icon: sign-out"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a></li>
-                </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a class="dropdown-toggle noti" data-toggle="dropdown" href="#">
+                        <span class="fa fa-bell" aria-hidden="true"><span class="" id="count"></span></span>
+                    </a>
+                    <ul class="dropdown-menu" id="notiContent"></ul>
+                </li>
+                <li><a href="#" uk-icon="icon: sign-out"><i class="fa fa-user" aria-hidden="true"></i> @Session["Username"].ToString()</a></li>
+                <li><a href="@Url.Action("Logout","Login")" uk-icon="icon: sign-out"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a></li>
+            </ul>
             }
             else
             {
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="@Url.Action("Index","Login")" uk-icon="icon: sign-out"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a></li>
-                </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="@Url.Action("Index","Login")" uk-icon="icon: sign-out"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a></li>
+            </ul>
             }
 
         </div>
     </div>
 </nav>
 <style>
-    ul#notiContent{
-        max-height:240px;
-        overflow:auto;
-        padding:0px;
-        margin:0px;
+    ul#notiContent {
+        max-height: 240px;
+        overflow: auto;
+        padding: 0px;
+        margin: 0px;
     }
+
         ul#notiContent li {
             border-bottom: 2px solid black;
             background-color: #cccccc;
             color: white;
             font-size: 16px;
         }
+
     #notiContent {
         min-width: 500px;
     }
+
     .badge {
-        position:absolute;
+        position: absolute;
         background-color: red;
         color: white;
-        bottom:25px;
-        right:1px;
+        bottom: 25px;
+        right: 1px;
     }
-        .badge1[data-badge]:after {
-            content: attr(data-badge);
-            position: absolute;
-            top: -10px;
-            right: -10px;
-            font-size: .7em;
-            background-color: red;
-            color: white;
-            width: 18px;
-            height: 18px;
-            text-align: center;
-            line-height: 18px;
-            border-radius: 50%;
-            box-shadow: 0 0 1px #333;
-        }
+
+    .badge1[data-badge]:after {
+        content: attr(data-badge);
+        position: absolute;
+        top: -10px;
+        right: -10px;
+        font-size: .7em;
+        background-color: red;
+        color: white;
+        width: 18px;
+        height: 18px;
+        text-align: center;
+        line-height: 18px;
+        border-radius: 50%;
+        box-shadow: 0 0 1px #333;
+    }
 </style>
 <script>
     $(document).ready(function () {
@@ -118,7 +120,7 @@
                         + value.SECTION_NUMBER_First + " ห้อง " + value.SECTION_CLASSROOM_First + " เวลา " + value.SECTION_TIME_START_First + ".00-" + value.SECTION_TIME_END_First + ".00 " + value.SEMESTER + "/" + value.YEAR + "<br>"
                         + value.SUBJECT_ID_Last + " "
                         + datethai[parseInt(tmp_datelast)]
-                        + " ตอน " + value.SECTION_NUMBER_Last + " ห้อง " + value.SECTION_CLASSROOM_Last + " เวลา " + value.SECTION_TIME_START_Last + ".00-" + value.SECTION_TIME_END_Last + ".00 " + value.SEMESTER + "/" + value.YEAR +  '</a></li>'));
+                        + " ตอน " + value.SECTION_NUMBER_Last + " ห้อง " + value.SECTION_CLASSROOM_Last + " เวลา " + value.SECTION_TIME_START_Last + ".00-" + value.SECTION_TIME_END_Last + ".00 " + value.SEMESTER + "/" + value.YEAR + '</a></li>'));
                 });
             },
             error: function (error) {
