--- a/TestExcel/Views/Data/Building.cshtml
+++ b/TestExcel/Views/Data/Building.cshtml
@@ -89,7 +89,7 @@
                     </select><br>
                     @*@Html.TextBox("BUILDING_NAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "DEPARTMENT_NAME", @style = "max-width:570px" })*@
                     <label>ห้องเรียน</label><br>
-                    @Html.TextBox("CLASSROOM_NAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "BRANCH_NAME", @style = "max-width:570px" })
+                    @Html.TextBox("CLASSROOM_NAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "63-414", @style = "max-width:570px" })
                 </div>
 
             </div>
