--- a/TestExcel/Views/Data/Department.cshtml
+++ b/TestExcel/Views/Data/Department.cshtml
@@ -59,9 +59,9 @@
                 <div class="w3-section">
                     @Html.Hidden("DEPARTMENT_ID", 0)
                     <label>ภาควิชา</label>
-                    @Html.TextBox("DEPARTMENT_NAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "DEPARTMENT_NAME", @style = "max-width:570px" })
+                    @Html.TextBox("DEPARTMENT_NAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "ภาควิชา", @style = "max-width:570px" })
                     <label>ภาควิชา(ภาษาไทย)</label>
-                    @Html.TextBox("DEPARTMENT_THAI_NAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "BRANCH_NAME", @style = "max-width:570px" })
+                    @Html.TextBox("DEPARTMENT_THAI_NAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "ภาควิชา(ภาษาไทย)", @style = "max-width:570px" })
                 </div>
 
             </div>
