--- a/TestExcel/Views/Data/Member.cshtml
+++ b/TestExcel/Views/Data/Member.cshtml
@@ -75,17 +75,17 @@
                 <div class="w3-section">
                     @Html.Hidden("ID", 0)
                     <label>USERNAME</label>
-                    @Html.TextBox("USER_USERNAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "DEPARTMENT_NAME", @style = "max-width:570px" })
+                    @Html.TextBox("USER_USERNAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "USERNAME", @style = "max-width:570px" })
                     <label>PASSWORD</label>
-                    @Html.TextBox("USER_PASSWORD", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "BRANCH_NAME", @style = "max-width:570px" })
+                    @Html.TextBox("USER_PASSWORD", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "PASSWORD", @style = "max-width:570px" })
                     <label>EMAIL</label>
-                    @Html.TextBox("USER_EMAIL", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "DEPARTMENT_NAME", @style = "max-width:570px" })
+                    @Html.TextBox("USER_EMAIL", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "EMAIL", @style = "max-width:570px" })
                     <label>ชื่อ</label>
-                    @Html.TextBox("USER_FIRSTNAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "BRANCH_NAME", @style = "max-width:570px" })
+                    @Html.TextBox("USER_FIRSTNAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "ชื่อ", @style = "max-width:570px" })
                     <label>นามสกุล</label>
-                    @Html.TextBox("USER_LASTNAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "DEPARTMENT_NAME", @style = "max-width:570px" })
+                    @Html.TextBox("USER_LASTNAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "นามสกุล", @style = "max-width:570px" })
                     <label>สถานะ</label>
-                    @Html.TextBox("USER_STATUS", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "BRANCH_NAME", @style = "max-width:570px" })
+                    @Html.TextBox("USER_STATUS", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "admin", @style = "max-width:570px" })
                 </div>
 
             </div>
