--- a/TestExcel/Views/Data/Professor.cshtml
+++ b/TestExcel/Views/Data/Professor.cshtml
@@ -71,15 +71,15 @@
                 <div class="w3-section">
                     @Html.Hidden("PROFESSOR_ID", 0)
                     <label>ชื่อ</label>
-                    @Html.TextBox("PROFESSOR_FIRSTNAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "DEPARTMENT_NAME", @style = "max-width:570px" })
+                    @Html.TextBox("PROFESSOR_FIRSTNAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "ชื่อจริง", @style = "max-width:570px" })
                     <label>นามสกุล</label>
-                    @Html.TextBox("PROFESSOR_LASTNAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "BRANCH_NAME", @style = "max-width:570px" })
+                    @Html.TextBox("PROFESSOR_LASTNAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "นามสกุล", @style = "max-width:570px" })
                     <label>อักษรย่อ</label>
-                    @Html.TextBox("PROFESSOR_SHORTNAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "DEPARTMENT_NAME", @style = "max-width:570px" })
+                    @Html.TextBox("PROFESSOR_SHORTNAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "", @style = "max-width:570px" })
                     <label>สถานะ</label>
-                    @Html.TextBox("PROFESSOR_STATUS", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "DEPARTMENT_NAME", @style = "max-width:570px" })
+                    @Html.TextBox("PROFESSOR_STATUS", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "", @style = "max-width:570px" })
                     <label>ภาควิชา</label>
-                    @Html.TextBox("DEPARTMENT_NAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "BRANCH_NAME", @style = "max-width:570px" })
+                    @Html.TextBox("DEPARTMENT_NAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "EnET", @style = "max-width:570px" })
                 </div>
 
             </div>
