--- a/TestExcel/Views/Data/Section.cshtml
+++ b/TestExcel/Views/Data/Section.cshtml
@@ -110,11 +110,11 @@
                     <div class="w3-row">
                         <div class="w3-half" style="max-width:230px">
                             <label>รหัสวิชา</label>
-                            @Html.TextBox("SUBJECT_ID", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "BRANCH_NAME" })
+                            @Html.TextBox("SUBJECT_ID", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "080303100" })
                         </div>
                         <div class="w3-half" style="max-width:230px;margin-left:50px">
                             <label>ตอนเรียน</label>
-                            @Html.TextBox("SECTION_NUMBER", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "DEPARTMENT_NAME" })
+                            @Html.TextBox("SECTION_NUMBER", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "02" })
                         </div>
                     </div>
                     <div class="w3-row">
@@ -169,16 +169,16 @@
                     </div>
                     <div class="w3-row">
                         <div class="w3-third" style="max-width:160px">
-                            <label>วันสอบปลายภาค</label>
-                            @Html.TextBox("SECTION_CLASSROOM", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "BRANCH_NAME" })
+                            <label>ห้องเรียน</label>
+                            @Html.TextBox("SECTION_CLASSROOM", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "63-414" })
                         </div>
                         <div class="w3-third" style="max-width:160px;margin-left:20px">
-                            <label>เวลาสอบปลายภาค</label>
-                            @Html.TextBox("SECTION_PROFESSOR_SHORTNAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "DEPARTMENT_NAME" })
+                            <label>อาจารย์ผู้สอน</label>
+                            @Html.TextBox("SECTION_PROFESSOR_SHORTNAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "อาจารย์ผู้สอน" })
                         </div>
                         <div class="w3-third" style="max-width:160px;margin-left:20px">
-                            <label>วันสอบปลายภาค</label>
-                            @Html.TextBox("SECTION_BRANCH_NAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "DEPARTMENT_NAME" })
+                            <label>สาขาวิชา</label>
+                            @Html.TextBox("SECTION_BRANCH_NAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "สาขาวิชา" })
                         </div>
                     </div>
                     <div class="w3-row">
@@ -192,7 +192,7 @@
                         </div>
                         <div class="w3-half" style="max-width:230px;margin-left:50px">
                             <label>ปีการศึกษา</label>
-                            @Html.TextBox("YEAR", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "DEPARTMENT_NAME" })
+                            @Html.TextBox("YEAR", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "2560" })
                         </div>
                     </div>
                 </div>
