--- a/TestExcel/Views/Data/Subject.cshtml
+++ b/TestExcel/Views/Data/Subject.cshtml
@@ -104,39 +104,39 @@
                 <div class="w3-section">
                     @Html.Hidden("ID", 0)
                     <label>รหัสวิชา</label>
-                    @Html.TextBox("SUBJECT_ID", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "DEPARTMENT_NAME", @style = "max-width:570px" })
+                    @Html.TextBox("SUBJECT_ID", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "080303100", @style = "max-width:570px" })
                     <label>ชื่อวิชา</label>
-                    @Html.TextBox("SUBJECT_NAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "BRANCH_NAME", @style = "max-width:570px" })
+                    @Html.TextBox("SUBJECT_NAME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "ชื่อวิชา", @style = "max-width:570px" })
                     <label>หน่วยกิต</label>
-                    @Html.TextBox("SUBJECT_CREDIT", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "DEPARTMENT_NAME", @style = "max-width:570px" })
+                    @Html.TextBox("SUBJECT_CREDIT", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "X(X-X-X)", @style = "max-width:570px" })
                     <div class="w3-row">
                         <div class="w3-half" style="max-width:230px">
                             <label>วันสอบกลางภาค</label>
-                            @Html.TextBox("SUBJECT_MIDTERM_DATE", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "BRANCH_NAME" })
+                            @Html.TextBox("SUBJECT_MIDTERM_DATE", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "6 Oct 17" })
                         </div>
                         <div class="w3-half" style="max-width:230px;margin-left:50px">
                             <label>เวลาสอบกลางภาค</label>
-                            @Html.TextBox("SUBJECT_MIDTERM_TIME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "DEPARTMENT_NAME" })
+                            @Html.TextBox("SUBJECT_MIDTERM_TIME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "8.00-12.00" })
                         </div>
                     </div>
                     <div class="w3-row">
                         <div class="w3-half" style="max-width:230px">
                             <label>วันสอบปลายภาค</label>
-                            @Html.TextBox("SUBJECT_FINAL_DATE", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "BRANCH_NAME" })
+                            @Html.TextBox("SUBJECT_FINAL_DATE", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "6 Dec 17" })
                         </div>
                         <div class="w3-half" style="max-width:230px;margin-left:50px">
                             <label>เวลาสอบปลายภาค</label>
-                            @Html.TextBox("SUBJECT_FINAL_TIME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "DEPARTMENT_NAME" })
+                            @Html.TextBox("SUBJECT_FINAL_TIME", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "8.00-12.00" })
                         </div>
                     </div>
                     <div class="w3-row">
                         <div class="w3-half" style="max-width:230px">
                             <label>ภาคการศึกษา</label>
-                            @Html.TextBox("SEMESTER", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "BRANCH_NAME" })
+                            @Html.TextBox("SEMESTER", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "1" })
                         </div>
                         <div class="w3-half" style="max-width:230px;margin-left:50px">
                             <label>ปีการศึกษา</label>
-                            @Html.TextBox("YEAR", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "DEPARTMENT_NAME" })
+                            @Html.TextBox("YEAR", "", new { @class = "w3-input w3-border w3-margin-bottom", @placeholder = "2560" })
                         </div>
                     </div>
                 </div>
